--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload only fronted/ folder
-          path: './frontend/'
+          path: './frontend_old/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
