--- a/data_scraping/package.json
+++ b/data_scraping/package.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
+    "jszip": "^3.10.1",
     "puppeteer": "^19.4.1"
   },
   "name": "data_scraping",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "request:data": "node request_data.js",
-    "download:data": "node download_data.js"
+    "download:data": "node download_data.js",
+    "unzip:data": "node unzip_file.js",
+    "sanitize:data": "node sanitize_data.js"
   },
   "author": "",
   "license": "ISC",
