--- a/data_scraping/package.json
+++ b/data_scraping/package.json
@@ -1,8 +1,10 @@
 {
-  "type": "module",
   "dependencies": {
     "jszip": "^3.10.1",
-    "puppeteer": "^19.4.1"
+    "puppeteer": "^19.5.2",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-adblocker": "^2.13.5",
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   },
   "name": "data_scraping",
   "version": "1.0.0",
