--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Stutustiques weekly build
+name: Stutustiques Build & Deploy
 
 on:
   # Allows you to run this workflow manually from the Actions tab
