--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Generating data
         run: npm run generate:data
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: data
+          path: ./build/Data/data.json
+
   Deployement:
     needs: Generation
     runs-on: ubuntu-latest
@@ -40,6 +45,11 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: data
+          path: ../data_generator/build/Data/
 
       - name: Install dependencies
         run: npm i
