--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: data
+          path: ./data_generator/build/Data/
 
       - name: Check artifact
         run: |
