trying to fix date issue

--- a/data_generator/package.json
+++ b/data_generator/package.json
@@ -16,5 +16,9 @@
   },
   "author": "TOPetit",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40"
+  }
 }
