--- a/.github/workflows/test_whatsapp.yml
+++ b/.github/workflows/test_whatsapp.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Generating data
         run: node index.js
         env:
-          FACEBOOK_EMAIL: ${{ secrets.GMAIL_USER }}
-          FACEBOOK_PASS: ${{ secrets.GMAIL_PASS }}
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
 
   Parsing:
     needs: Email
