--- a/.github/workflows/whatsapp.yml
+++ b/.github/workflows/whatsapp.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./data_generator
+        working-directory: ./whatsapp_files
     steps:
       - name: Checkout
         uses: actions/checkout@v3
