--- a/.github/workflows/whatsapp.yml
+++ b/.github/workflows/whatsapp.yml
@@ -51,6 +51,12 @@ jobs:
           add: data_scraping/src/data/data.json
           message: "AutoCommit: Added new whatsapp data."
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merged_data
+          path: ./data_scraping/src/data/data.json
+
   # Data generation job
   Generation:
     needs: Parsing
@@ -61,6 +67,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merged_data
+          path: ./data_scraping/src/data/
 
       - name: Install dependencies
         run: npm i
